--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,13 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+
+bin/
+obj/
+.vs/
+*.user
+*.db
+*.sqlite
+*.mdf
+.env
+appsettings.*.json
