Add Docker and migration support for API and Auth services
Introduced docker-compose for orchestrating API and Auth services with separate SQL Server containers. Added Dockerfiles and .dockerignore for both projects, updated Program.cs to support environment variable configuration and automatic EF Core migrations at startup, and enabled Swagger UI in all environments.

--- a/FU_House_Finder/Dockerfile
+++ b/FU_House_Finder/Dockerfile
@@ -1,29 +1,37 @@
-# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-# This stage is used when running from VS in fast mode (Default for Debug configuration)
+# Giai đoạn 1: Base Image (Runtime)
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER $APP_UID
+# Sử dụng user non-root mặc định của .NET 8 để bảo mật hơn
+USER app 
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
-
-# This stage is used to build the service project
+# Giai đoạn 2: Build Image (SDK)
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
+
+# LƯU Ý QUAN TRỌNG: 
+# Vì context là "../FU_House_Finder", nên file .csproj nằm ngay tại root của context.
+# Ta copy trực tiếp nó vào thư mục hiện tại (.)
 COPY ["FU_House_Finder.csproj", "."]
+
+# Restore các package
 RUN dotnet restore "./FU_House_Finder.csproj"
+
+# Copy toàn bộ source code còn lại vào image
 COPY . .
+
+# Build dự án
 WORKDIR "/src/."
 RUN dotnet build "./FU_House_Finder.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# This stage is used to publish the service project to be copied to the final stage
+# Giai đoạn 3: Publish
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "./FU_House_Finder.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
+# Giai đoạn 4: Final (Tạo image cuối cùng)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
